поменял версию java в боте, отредачил код, для совместимости